--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     input, select, textarea { width: 100%; padding: 10px; margin-top: 5px; border-radius: 5px; border: 1px solid #ccc; }
     button { margin-top: 20px; padding: 12px; background: #2c3e50; color: white; border: none; border-radius: 5px; width: 100%; cursor: pointer; font-size: 16px; }
     button:hover { background: #1a252f; }
-    iframe { display: none; height: 0; border: none; }
     #loadingMessage { text-align: center; margin-top: 10px; color: #555; font-style: italic; }
   </style>
 </head>
@@ -26,54 +25,50 @@
   <button onclick="validateEmail()">Validate Email</button>
   <div id="loadingMessage"></div>
 
-  <form id="leaveForm" target="invisibleFrame">
-    <div id="studentInfo" style="display: none;">
-      <label for="studentName">Student Name</label>
-      <select id="studentName" onchange="autofillDetails()" required></select>
+  <form id="leaveForm" style="display:none" onsubmit="handleSubmit(event)">
+    <label for="studentName">Student Name</label>
+    <select id="studentName" required onchange="autofillDetails()"></select>
 
-      <label for="studentId">Student ID</label>
-      <input type="text" id="studentId" readonly required>
+    <label for="studentId">Student ID</label>
+    <input type="text" id="studentId" readonly required>
 
-      <label for="grade">Grade</label>
-      <input type="text" id="grade" readonly required>
+    <label for="grade">Grade</label>
+    <input type="text" id="grade" readonly required>
 
-      <label for="section">Section</label>
-      <input type="text" id="section" readonly required>
+    <label for="section">Section</label>
+    <input type="text" id="section" readonly required>
 
-      <label for="leaveType">Type of Leave</label>
-      <select id="leaveType" required onchange="handleDismissalOption()">
+    <label for="leaveType">Type of Leave</label>
+    <select id="leaveType" required onchange="handleDismissalOption()">
+      <option value="">Select</option>
+      <option>Sick Leave</option>
+      <option>Planned Leave</option>
+      <option>Unplanned Leave</option>
+      <option>Early Dismissal</option>
+    </select>
+
+    <div id="dismissalOptionContainer" style="display: none;">
+      <label for="dismissalOption">Early Dismissal Plan</label>
+      <select id="dismissalOption">
         <option value="">Select</option>
-        <option>Sick Leave</option>
-        <option>Planned Leave</option>
-        <option>Unplanned Leave</option>
-        <option>Early Dismissal</option>
+        <option>Parent/Guardian will pick up the student from school</option>
+        <option>Student will leave on their own after early dismissal</option>
       </select>
-
-      <div id="dismissalOptionContainer" style="display: none;">
-        <label for="dismissalOption">Early Dismissal Plan</label>
-        <select id="dismissalOption" required>
-          <option value="">Select</option>
-          <option value="Parent/Guardian will pick up the student from school">Parent/Guardian will pick up the student from school</option>
-          <option value="Student will leave on their own after early dismissal">Student will leave on their own after early dismissal</option>
-        </select>
-      </div>
-
-      <label for="fromDate">From Date</label>
-      <input type="date" id="fromDate" required>
-
-      <label for="toDate">To Date</label>
-      <input type="date" id="toDate" required>
-
-      <label for="reason">Reason <span style="font-weight: normal; font-style: italic;">(If Early Dismissal, please mention time)</span></label>
-      <textarea id="reason" rows="4" required></textarea>
-
-      <input type="hidden" id="hiddenEmailField" required>
-      <input type="hidden" id="hiddenDismissalPlan">
-
-      <button type="button" onclick="handleSubmit()">Submit</button>
     </div>
+
+    <label for="fromDate">From Date</label>
+    <input type="date" id="fromDate" required>
+
+    <label for="toDate">To Date</label>
+    <input type="date" id="toDate" required>
+
+    <label for="reason">Reason <span style="font-weight: normal; font-style: italic;">(If Early Dismissal, please mention time)</span></label>
+    <textarea id="reason" rows="4" required></textarea>
+
+    <input type="hidden" id="dismissalPlan" name="dismissalPlan">
+
+    <button type="submit">Submit</button>
   </form>
-  <iframe name="invisibleFrame" id="invisibleFrame"></iframe>
 </div>
 
 <script>
@@ -88,13 +83,11 @@
       return;
     }
 
-    messageDiv.textContent = "🔒 GIS takes safeguarding very seriously. Please wait while we validate the email against our records...";
+    messageDiv.textContent = "GIS takes safeguarding very seriously. Please wait while we validate the email against our records...";
 
     fetch(`${API_URL}?email=${encodeURIComponent(email)}`)
       .then(res => res.json())
       .then(data => {
-        messageDiv.textContent = "";
-
         if (!data.students || data.students.length === 0) {
           alert("No students found for this email.");
           return;
@@ -109,8 +102,8 @@
           dropdown.appendChild(option);
         });
 
-        document.getElementById('hiddenEmailField').value = email;
-        document.getElementById('studentInfo').style.display = 'block';
+        document.getElementById('leaveForm').style.display = 'block';
+        messageDiv.textContent = "";
       })
       .catch(err => {
         messageDiv.textContent = "";
@@ -119,9 +112,7 @@
   }
 
   function autofillDetails() {
-    const selected = document.getElementById('studentName').value;
-    if (!selected) return;
-    const student = JSON.parse(selected);
+    const student = JSON.parse(document.getElementById('studentName').value);
     document.getElementById('grade').value = student.grade;
     document.getElementById('section').value = student.section;
     document.getElementById('studentId').value = student.studentId;
@@ -129,62 +120,43 @@
   }
 
   function handleDismissalOption() {
-    const grade = document.getElementById('grade').value.trim();
-    const leaveType = document.getElementById('leaveType').value.trim();
-    const dismissalContainer = document.getElementById('dismissalOptionContainer');
-    const dismissalSelect = document.getElementById('dismissalOption');
-    const hiddenDismissal = document.getElementById('hiddenDismissalPlan');
-
+    const leaveType = document.getElementById('leaveType').value;
+    const grade = document.getElementById('grade').value;
     const juniorGrades = ['PK', 'KG1', 'KG2', 'Grade 1', 'Grade 2', 'Grade 3', 'Grade 4', 'Grade 5'];
+
+    const dismissalContainer = document.getElementById('dismissalOptionContainer');
+    const dismissalPlanField = document.getElementById('dismissalPlan');
 
     if (leaveType === 'Early Dismissal') {
       if (juniorGrades.includes(grade)) {
-        alert("Parent/Guardian must pick up the student from school.");
+        alert("For Early Dismissal, Parent/Guardian must pick up the student from school.");
         dismissalContainer.style.display = 'none';
-        hiddenDismissal.value = 'Parent/Guardian will pick up the student from school';
+        dismissalPlanField.value = "Parent/Guardian will pick up the student from school";
       } else {
         dismissalContainer.style.display = 'block';
-        hiddenDismissal.value = dismissalSelect.value;
+        dismissalPlanField.value = "";
       }
     } else {
       dismissalContainer.style.display = 'none';
-      dismissalSelect.value = '';
-      hiddenDismissal.value = '';
+      dismissalPlanField.value = "";
     }
   }
 
-  function handleSubmit() {
-    const requiredFields = ['studentName', 'studentId', 'grade', 'section', 'leaveType', 'fromDate', 'toDate', 'reason', 'hiddenEmailField'];
-    for (let id of requiredFields) {
-      if (!document.getElementById(id).value) {
-        alert('Please fill in all fields before submitting.');
-        return;
-      }
-    }
+  function handleSubmit(event) {
+    event.preventDefault();
 
-    const leaveType = document.getElementById('leaveType').value;
-    const grade = document.getElementById('grade').value.trim();
-    const dismissal = document.getElementById('dismissalOption');
-    const hiddenDismissal = document.getElementById('hiddenDismissalPlan');
-
-    if (leaveType === 'Early Dismissal' && !['PK','KG1','KG2','Grade 1','Grade 2','Grade 3','Grade 4','Grade 5'].includes(grade) && !dismissal.value) {
-      alert("Please select the early dismissal plan.");
-      return;
-    } else if (leaveType === 'Early Dismissal' && !['PK','KG1','KG2','Grade 1','Grade 2','Grade 3','Grade 4','Grade 5'].includes(grade)) {
-      hiddenDismissal.value = dismissal.value;
-    }
-
+    const student = JSON.parse(document.getElementById('studentName').value);
     const payload = {
-      email: document.getElementById('hiddenEmailField').value,
-      studentName: JSON.parse(document.getElementById('studentName').value).name,
-      studentId: document.getElementById('studentId').value,
-      grade: document.getElementById('grade').value,
-      section: document.getElementById('section').value,
-      leaveType: leaveType,
+      email: document.getElementById('email').value,
+      studentName: student.name,
+      studentId: student.studentId,
+      grade: student.grade,
+      section: student.section,
+      leaveType: document.getElementById('leaveType').value,
       fromDate: document.getElementById('fromDate').value,
       toDate: document.getElementById('toDate').value,
       reason: document.getElementById('reason').value,
-      dismissalPlan: hiddenDismissal.value
+      dismissalPlan: document.getElementById('dismissalPlan').value
     };
 
     fetch(API_URL, {
@@ -192,14 +164,16 @@
       body: JSON.stringify(payload),
       headers: { 'Content-Type': 'application/json' }
     })
-    .then(res => res.json())
-    .then(data => {
-      alert("✅ Your leave request has been submitted. You will be notified via email.");
-      setTimeout(() => window.location.reload(), 3000);
-    })
-    .catch(error => {
-      alert("❌ There was an error submitting the form. Please try again.");
-    });
+      .then(res => res.json())
+      .then(res => {
+        if (res.status === 'Success') {
+          alert("✅ Your leave request has been submitted successfully.");
+          window.location.reload();
+        } else {
+          alert("Something went wrong. Please try again.");
+        }
+      })
+      .catch(() => alert("Error submitting leave request."));
   }
 </script>
 </body>
