--- a/index.html
+++ b/index.html
@@ -1,179 +1,154 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>GIS Leave Request Form</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GIS Leave Request</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background-color: #f4f4f4; }
-    .container { max-width: 600px; margin: auto; background: #fff; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    h2 { text-align: center; }
-    label { display: block; margin-top: 15px; font-weight: bold; }
-    input, select, textarea { width: 100%; padding: 10px; margin-top: 5px; border-radius: 5px; border: 1px solid #ccc; }
-    button { margin-top: 20px; padding: 12px; background: #2c3e50; color: white; border: none; border-radius: 5px; width: 100%; cursor: pointer; font-size: 16px; }
-    button:hover { background: #1a252f; }
-    #loadingMessage { text-align: center; margin-top: 10px; color: #555; font-style: italic; }
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    .hidden { display: none; }
   </style>
 </head>
 <body>
-<div class="container">
-  <h2>GEMS International School, Al Khail</h2>
-  <h2>Leave Request Form</h2>
+  <h2>GIS Leave Request Form</h2>
 
-  <label for="email">Parent/Guardian Email registered with GIS</label>
-  <input type="email" id="email" required>
-  <button onclick="validateEmail()">Validate Email</button>
-  <div id="loadingMessage"></div>
+  <form id="leaveForm">
+    <label>Email:</label><br>
+    <input type="email" id="email" required><br><br>
 
-  <form id="leaveForm" action="https://docs.google.com/forms/d/e/1FAIpQLSdcnWetkfAFEOe_SmhsHyT7fOuW5tPuG_Bjzbv1FnM-l5m8_g/formResponse" method="POST" target="invisibleFrame">
-    <div id="studentInfo" style="display: none;">
+    <button type="button" onclick="validateEmail()">Validate Email</button><br><br>
 
-      <label for="studentName">Student Name</label>
-      <select id="studentName" name="entry.1112781725" onchange="autofillDetails()" required></select>
+    <div id="studentSection" class="hidden">
+      <label>Student Name:</label><br>
+      <select id="studentName" name="studentName" required></select><br><br>
 
-      <input type="hidden" id="studentId" name="entry.102330296">
-      <input type="hidden" id="grade" name="entry.468445493">
-      <input type="hidden" id="section" name="entry.1428888703">
+      <label>Leave Type:</label><br>
+      <select id="leaveType" name="leaveType" required onchange="handleLeaveTypeChange()">
+        <option value="">Select Leave Type</option>
+        <option value="Sick Leave">Sick Leave</option>
+        <option value="Planned Leave">Planned Leave</option>
+        <option value="Unplanned Leave">Unplanned Leave</option>
+        <option value="Early Dismissal">Early Dismissal</option>
+      </select><br><br>
 
-      <label for="leaveType">Type of Leave</label>
-      <select id="leaveType" name="entry.722608314" required onchange="handleDismissalOption()">
-        <option value="">Select</option>
-        <option>Sick Leave</option>
-        <option>Planned Leave</option>
-        <option>Unplanned Leave</option>
-        <option>Early Dismissal</option>
-      </select>
+      <label>From Date:</label><br>
+      <input type="date" id="fromDate" required><br><br>
 
-      <div id="dismissalOptionContainer" style="display: none;">
-        <label for="dismissalOption">Early Dismissal Plan</label>
-        <select id="dismissalOptionSelect" name="entry.1010113884">
-          <option value="">Select</option>
-          <option>Parent/Guardian will pick up the student from school</option>
-          <option>Student will leave on their own after early dismissal</option>
+      <label>To Date:</label><br>
+      <input type="date" id="toDate" required><br><br>
+
+      <label>Reason:</label><br>
+      <textarea id="reason" required></textarea><br><br>
+
+      <!-- Hidden or dropdown for dismissal plan -->
+      <div id="dismissalPlanContainer" class="hidden">
+        <label>Dismissal Plan:</label><br>
+        <select id="dismissalOptionSelect" name="dismissalPlan">
+          <option value="">Select an option</option>
+          <option value="Parent/Guardian will pick up the student from school">Parent/Guardian will pick up the student from school</option>
+          <option value="Student will leave on their own after early dismissal">Student will leave on their own after early dismissal</option>
         </select>
       </div>
+      <input type="hidden" id="dismissalOptionHidden" name="dismissalPlan">
 
-      <input type="hidden" id="dismissalOptionHidden" name="entry.1010113884">
-
-      <label for="fromDate">From Date</label>
-      <input type="date" id="fromDate" name="entry.1213409688" required>
-
-      <label for="toDate">To Date</label>
-      <input type="date" id="toDate" name="entry.88265946" required>
-
-      <label for="reason">Reason <i>(If Early Dismissal, please mention time)</i></label>
-      <textarea id="reason" name="entry.2006563853" rows="4" required></textarea>
-
-      <input type="hidden" id="hiddenEmailField" name="entry.383074926" required>
-
-      <button type="button" onclick="handleSubmit()">Submit</button>
+      <br><button type="submit">Submit Request</button>
     </div>
   </form>
 
-  <iframe name="invisibleFrame" style="display:none;"></iframe>
-</div>
+  <script>
+    let selectedStudent = {};
 
-<script>
-const API_URL = 'https://script.google.com/macros/s/AKfycbydNwIgNePZ5LBmfoH5OE9RkaZ_TjZDJcHqeuGUA1sXzAcxVqX8YkWKBrsRViZ6xlBD/exec';
+    function validateEmail() {
+      const email = document.getElementById('email').value;
+      if (!email) return alert("Please enter an email.");
 
-let studentMap = {};
+      alert("GIS takes safeguarding seriously. Please wait whilst we validate the email against our records...");
 
-function validateEmail() {
-  const email = document.getElementById('email').value.trim();
-  const messageDiv = document.getElementById('loadingMessage');
-  if (!email) return alert("Please enter your email.");
+      fetch(`https://script.google.com/macros/s/YOUR_DEPLOYED_URL/exec?email=${email}`)
+        .then(response => response.json())
+        .then(data => {
+          const dropdown = document.getElementById('studentName');
+          dropdown.innerHTML = '';
+          if (data.students.length === 0) {
+            alert("No student found for this email.");
+            return;
+          }
 
-  messageDiv.textContent = "🔒 GIS takes safeguarding seriously. Please wait whilst we validate the email against our records...";
+          data.students.forEach(student => {
+            const option = document.createElement('option');
+            option.value = student.name;
+            option.textContent = student.name;
+            option.dataset.id = student.studentId;
+            option.dataset.grade = student.grade;
+            option.dataset.section = student.section;
+            dropdown.appendChild(option);
+          });
 
-  fetch(`${API_URL}?email=${encodeURIComponent(email)}`)
-    .then(res => res.json())
-    .then(data => {
-      messageDiv.textContent = "";
-      if (!data.students || data.students.length === 0) return alert("No students found for this email.");
-
-      const dropdown = document.getElementById('studentName');
-      dropdown.innerHTML = '<option value="">Select Student</option>';
-      studentMap = {}; // clear previous
-      data.students.forEach(stu => {
-        studentMap[stu.name] = stu;
-        const option = document.createElement('option');
-        option.value = stu.name;
-        option.textContent = stu.name;
-        dropdown.appendChild(option);
-      });
-
-      document.getElementById('hiddenEmailField').value = email;
-      document.getElementById('studentInfo').style.display = 'block';
-    })
-    .catch(() => {
-      messageDiv.textContent = "";
-      alert("Error validating email.");
-    });
-}
-
-function autofillDetails() {
-  const name = document.getElementById('studentName').value;
-  const student = studentMap[name];
-  if (!student) return;
-
-  document.getElementById('studentId').value = student.studentId;
-  document.getElementById('grade').value = student.grade;
-  document.getElementById('section').value = student.section;
-
-  handleDismissalOption();
-}
-
-function handleDismissalOption() {
-  const grade = document.getElementById('grade').value.trim();
-  const leaveType = document.getElementById('leaveType').value;
-  const isLowerGrade = ['PK', 'KG1', 'KG2', 'Grade 1', 'Grade 2', 'Grade 3', 'Grade 4', 'Grade 5'].includes(grade);
-  const isUpperGrade = ['Grade 6', 'Grade 7', 'Grade 8', 'Grade 9', 'Grade 10', 'Grade 11', 'Grade 12'].includes(grade);
-
-  const dismissalContainer = document.getElementById('dismissalOptionContainer');
-  const dismissalHidden = document.getElementById('dismissalOptionHidden');
-  const dismissalSelect = document.getElementById('dismissalOptionSelect');
-
-  dismissalHidden.value = "";
-  dismissalSelect.value = "";
-
-  if (leaveType === 'Early Dismissal') {
-    if (isLowerGrade) {
-      alert("For PK–Grade 5: Parent/Guardian will pick up the student from school.");
-      dismissalContainer.style.display = "none";
-      dismissalHidden.value = "Parent/Guardian will pick up the student from school";
-    } else if (isUpperGrade) {
-      dismissalContainer.style.display = "block";
-    } else {
-      dismissalContainer.style.display = "none";
+          document.getElementById('studentSection').classList.remove('hidden');
+        });
     }
-  } else {
-    dismissalContainer.style.display = "none";
-    dismissalHidden.value = "";
-    dismissalSelect.value = "";
-  }
-}
 
-function handleSubmit() {
-  const leaveType = document.getElementById('leaveType').value;
-  const isUpperGrade = ['Grade 6', 'Grade 7', 'Grade 8', 'Grade 9', 'Grade 10', 'Grade 11', 'Grade 12'].includes(document.getElementById('grade').value.trim());
+    function handleLeaveTypeChange() {
+      const leaveType = document.getElementById('leaveType').value;
+      const studentDropdown = document.getElementById('studentName');
+      const selectedOption = studentDropdown.options[studentDropdown.selectedIndex];
 
-  if (!document.getElementById('studentName').value || !document.getElementById('fromDate').value || !document.getElementById('toDate').value || !document.getElementById('reason').value) {
-    return alert("Please complete all required fields.");
-  }
+      const grade = selectedOption?.dataset?.grade || '';
+      const primaryGrades = ["PK", "KG1", "KG2", "Grade 1", "Grade 2", "Grade 3", "Grade 4", "Grade 5"];
 
-  if (leaveType === "Early Dismissal" && isUpperGrade && !document.getElementById('dismissalOptionSelect').value) {
-    return alert("Please select the early dismissal plan.");
-  }
+      if (leaveType === "Early Dismissal") {
+        if (primaryGrades.includes(grade)) {
+          alert("Parent/Guardian will pick up the student from school.");
+          document.getElementById('dismissalOptionHidden').value = "Parent/Guardian will pick up the student from school";
+          document.getElementById('dismissalPlanContainer').classList.add('hidden');
+        } else {
+          document.getElementById('dismissalOptionSelect').value = '';
+          document.getElementById('dismissalPlanContainer').classList.remove('hidden');
+        }
+      } else {
+        document.getElementById('dismissalOptionHidden').value = '';
+        document.getElementById('dismissalPlanContainer').classList.add('hidden');
+      }
+    }
 
-  if (leaveType === "Early Dismissal" && isUpperGrade) {
-    document.getElementById('dismissalOptionHidden').value = document.getElementById('dismissalOptionSelect').value;
-  }
+    document.getElementById('leaveForm').addEventListener('submit', function(e) {
+      e.preventDefault();
 
-  alert("✅ Your leave request has been submitted.");
-  document.getElementById('leaveForm').submit();
+      const studentDropdown = document.getElementById('studentName');
+      const selectedOption = studentDropdown.options[studentDropdown.selectedIndex];
 
-  setTimeout(() => location.reload(), 3000);
-}
-</script>
+      const data = {
+        email: document.getElementById('email').value,
+        studentName: selectedOption.value,
+        studentId: selectedOption.dataset.id,
+        grade: selectedOption.dataset.grade,
+        section: selectedOption.dataset.section,
+        leaveType: document.getElementById('leaveType').value,
+        fromDate: document.getElementById('fromDate').value,
+        toDate: document.getElementById('toDate').value,
+        reason: document.getElementById('reason').value,
+        dismissalPlan: document.getElementById('dismissalOptionHidden').value || document.getElementById('dismissalOptionSelect').value
+      };
+
+      if (data.leaveType === "Early Dismissal" && !data.dismissalPlan) {
+        alert("Please select a dismissal plan.");
+        return;
+      }
+
+      ffetch("https://script.google.com/macros/s/AKfycbydNwIgNePZ5LBmfoH5OE9RkaZ_TjZDJcHqeuGUA1sXzAcxVqX8YkWKBrsRViZ6xlBD/exec", {
+  method: "POST",
+  body: JSON.stringify(data),
+  headers: { "Content-Type": "application/json" }
+})
+      .then(res => res.json())
+      .then(response => {
+        if (response.status === 'Success') {
+          alert("Leave request submitted successfully!");
+          document.getElementById('leaveForm').reset();
+          document.getElementById('studentSection').classList.add('hidden');
+        } else {
+          alert("Submission failed. Please try again.");
+        }
+      });
+    });
+  </script>
 </body>
 </html>
